[package]
name = "practice"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "account-data/program",
  "checking-account/program",
  "close-account/program",
  "counter/program", "create-account/program", "cross-program-invocation/hand", "cross-program-invocation/lever", "favorite",
  "tests"
]

[dependencies]
