[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
account_data = { path = "../account-data/program" }
close_account = { path = "../close-account/program" }
cross-program-invocatio-native-lever = { path = "../cross-program-invocation/lever" }
favorite = { path = "../favorite" }
pda-rent-payer = { path = "../pda-rent-payer" }
solana-sdk = "2.3.1"
solana-client = "2.3.7"
borsh = "1.5.7"
tokio = "1.47.1"
once_cell = "1.21.3"
