[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
account_data = { path = "../account-data/program" }
close_account = { path = "../close-account/program" }
cross-program-invocatio-native-lever = { path = "../cross-program-invocation/lever" }
favorite = { path = "../favorite" }
pda-rent-payer = { path = "../pda-rent-payer" }
realloc = { path = "../realloc" }
repository-layout = { path = "../repository-layout" }
solana-sdk = "2.3.1"
solana-client = "2.3.7"
borsh = "1.5.7"
tokio = "1.47.1"
once_cell = "1.21.3"
spl-token-2022-interface = "2.0.0"
spl-token-interface = "2.0.0"
solana-system-interface = "2.0.0"
spl-token = "8.0.0"
anyhow = "1.0.100"